deployments/k8s/flight.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-deployment
  labels:
    app: flight
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight
  template:
    metadata:
      labels:
        app: flight
    spec:
      containers:
        - image: meysamh66/booking-microservices-flight:v1.5.9
          name: flight
          ports:
            - containerPort: 80
          volumeMounts:
          - name: appsettings-volume
            mountPath: /app/Settings
      volumes:
      - name: appsettings-volume
        configMap:
          name: appsettings
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
spec:
  selector:
    app: flight
  ports:
  - name: http
    protocol: TCP
    port: 80
    # targetPort: 80
    nodePort: 30444
  type: NodePort
