deployments/k8s/identity.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  labels:
    app: identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - image: meysamh66/booking-microservices-identity:v1.6.1
          name: identity
          ports:
            - containerPort: 80
          volumeMounts:
          - name: appsettings-volume
            mountPath: /app/Settings
      volumes:
      - name: appsettings-volume
        configMap:
          name: appsettings
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
spec:
  selector:
    app: identity
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30443
  type: NodePort
